[gd_scene load_steps=12 format=3 uid="uid://bi38sacvfy6xa"]

[ext_resource type="Script" path="res://RDE_Scripts/Local_Scripts/Game Base/game.gd" id="1_psimn"]
[ext_resource type="Script" path="res://RDE_Scripts/Local_Scripts/Game Base/camera_2d.gd" id="2_85jn5"]
[ext_resource type="Shader" path="res://RDE_Images/RDE_Shaders/camcorder_shader.gdshader" id="3_1mukl"]
[ext_resource type="PackedScene" uid="uid://cpiu3tcragd52" path="res://RDE_Scenes/fight_ui.tscn" id="3_163st"]
[ext_resource type="Script" path="res://RDE_Scripts/Local_Scripts/Game UI/music_player.gd" id="3_btvjt"]
[ext_resource type="PackedScene" uid="uid://bh6wxwjtwfcwq" path="res://RDE_Scenes/pause_menu.tscn" id="3_mfvle"]
[ext_resource type="PackedScene" uid="uid://sv71npsv8bdn" path="res://RDE_Scenes/Settings/RGT_Plains.tscn" id="4_72mc8"]
[ext_resource type="Script" path="res://RDE_Scripts/Local_Scripts/Game World/game_background.gd" id="4_a1q2e"]
[ext_resource type="PackedScene" uid="uid://nlpg0x3l8com" path="res://RDE_Scenes/victory_menu.tscn" id="4_b4hy0"]
[ext_resource type="Script" path="res://RDE_Scripts/Local_Scripts/Game Base/fight.gd" id="6_b2j36"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_i2p84"]
shader = ExtResource("3_1mukl")
shader_parameter/color_bleed_enabled = true
shader_parameter/chromatic_abberation_enabled = true
shader_parameter/film_grain_enabled = true
shader_parameter/sharpness_enabled = true
shader_parameter/chromatic_abberation_seperation = 0.011
shader_parameter/chromatic_abberation_intensity = 0.2
shader_parameter/chromatic_abberation_blur_strength = 1.0
shader_parameter/film_grain_intensity = 1.0
shader_parameter/grain_size = 2.0
shader_parameter/darkness_clamp = 0.28
shader_parameter/sharpness_size = 1.0
shader_parameter/sharpness_intensity = 0.7
shader_parameter/color_bleed_seperation = 0.02
shader_parameter/color_bleed_intensity = 0.2
shader_parameter/anti_bleed_intensity = 1.8
shader_parameter/color_bleed_blur_strength = 1.0
shader_parameter/color_bleed_quality = 5

[node name="Game" type="Node2D"]
script = ExtResource("1_psimn")

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -10.0
autoplay = true
bus = &"Music Bus"
script = ExtResource("3_btvjt")

[node name="Shaders" type="CanvasLayer" parent="."]

[node name="VHS Shader" type="ColorRect" parent="Shaders"]
visible = false
material = SubResource("ShaderMaterial_i2p84")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="pause_menu" parent="." instance=ExtResource("3_mfvle")]

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = -1600
limit_top = -1100
limit_right = 1600
limit_bottom = 1100
position_smoothing_enabled = true
rotation_smoothing_enabled = true
editor_draw_limits = true
editor_draw_drag_margin = true
script = ExtResource("2_85jn5")
player_tracking_speed = 1.5
max_lean_distance = 250.0

[node name="VictoryMenu" parent="Camera2D" instance=ExtResource("4_b4hy0")]

[node name="Background" type="Node2D" parent="."]
script = ExtResource("4_a1q2e")

[node name="CanvasModulate" type="CanvasModulate" parent="Background"]
color = Color(0.691453, 0.342539, 0.161267, 1)

[node name="TEST_WORLD" parent="Background" instance=ExtResource("4_72mc8")]
visible = false

[node name="Fight" type="Node2D" parent="."]
script = ExtResource("6_b2j36")

[node name="fight_ui" parent="Fight" instance=ExtResource("3_163st")]

[node name="FightTimeTracker" type="Timer" parent="Fight"]
autostart = true

[node name="Cutscene" type="Node2D" parent="."]

[connection signal="fight_res_set" from="." to="MusicPlayer" method="_on_game_fight_res_set"]
[connection signal="fight_res_set" from="." to="Background" method="_on_game_fight_res_set"]
[connection signal="fight_res_set" from="." to="Fight" method="_on_game_fight_res_set"]
[connection signal="game_pause" from="." to="pause_menu" method="_on_game_pause"]
[connection signal="game_pause" from="." to="Background" method="_on_game_pause"]
[connection signal="game_unpause" from="." to="pause_menu" method="_on_game_unpause"]
[connection signal="game_unpause" from="." to="Background" method="_on_game_unpause"]
[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="finished" from="MusicPlayer" to="MusicPlayer" method="_on_finished"]
[connection signal="tree_exiting" from="Camera2D" to="Camera2D" method="_on_tree_exiting"]
[connection signal="player_created" from="Fight" to="Camera2D" method="_on_fight_player_created"]
[connection signal="timeout" from="Fight/FightTimeTracker" to="Fight" method="_on_fight_time_tracker_timeout"]
